@@ -1,0 +1,61 @@
+APBOX = 0 <type 'int'>
+APERTURE = 10 <type 'int'>
+AUTOSNAP = 55 <type 'int'>
+AUTOSNAPCOLOR = #33A02C <type 'string'>
+AUTOSNAPSIZE = 5 <type 'int'>
+AUTOTRECKINGVECTORCOLOR = #33A02C <type 'string'>
+CMDHISTORYBACKCOLOR = #c8c8c8 <type 'string'>
+CMDHISTORYFORECOLOR = #000000 <type 'string'>
+CMDINPUTHISTORYMAX = 20 <type 'int'>
+CMDLINEBACKCOLOR = #FFFFFF <type 'string'>
+CMDLINEFORECOLOR = #000000 <type 'string'>
+CMDLINEOPTBACKCOLOR = #D2D2D2 <type 'string'>
+CMDLINEOPTCOLOR = #0000FF <type 'string'>
+CMDLINEOPTHIGHLIGHTEDCOLOR = #B3B3B3 <type 'string'>
+COPYMODE = 0 <type 'int'>
+CROSSINGAREACOLOR = #33A02C <type 'string'>
+CURSORCOLOR = #e31a1c <type 'string'>
+CURSORSIZE = 5 <type 'int'>
+DELOBJ = 1 <type 'int'>
+DYNDIGRIP = 31 <type 'int'>
+DYNDIVIS = 1 <type 'int'>
+DYNEDITFORECOLOR = #000000 <type 'string'>
+DYNEDITBACKCOLOR = #939393 <type 'string'>
+DYNEDITBORDERCOLOR = #000000 <type 'string'>
+DYNMODE = 3 <type 'int'>
+DYNPICOORDS = 0 <type 'int'>
+DYNPIFORMAT = 0 <type 'int'>
+DYNPIVIS = 1 <type 'int'>
+DYNPROMPT = 1 <type 'int'>
+DYNTOOLTIPS = 1 <type 'int'>
+DYNTRECKINGVECTORCOLOR = #969C9A <type 'string'>
+EDGEMODE = 0 <type 'int'>
+GRIPCOLOR = #100DD6 <type 'string'>
+GRIPCONTOUR = #939393 <type 'string'>
+GRIPHOT = #FF0000 <type 'string'>
+GRIPHOVER = #FF7F7F <type 'string'>
+GRIPMULTIFUNCTIONAL = 3 <type 'int'>
+GRIPOBJLIMIT = 100 <type 'int'>
+GRIPS = 1 <type 'int'>
+GRIPSIZE = 5 <type 'int'>
+INPUTSEARCHDELAY = 500 <type 'int'>
+INPUTSEARCHOPTIONS = 15 <type 'int'>
+MAXARRAY = 100000 <type 'int'>
+OFFSETGAPTYPE = 0 <type 'int'>
+OSMODE = 2113549 <type 'int'>
+PICKADD = 0 <type 'int'>
+PICKBOX = 5 <type 'int'>
+PICKBOXCOLOR = #FF0000 <type 'string'>
+PICKFIRST = 1 <type 'int'>
+POLARANG = 45.0 <type 'float'>
+POLARMODE = 0 <type 'int'>
+SELECTIONAREA = 1 <type 'int'>
+SELECTIONAREAOPACITY = 25 <type 'int'>
+SHORTCUTMENU = 11 <type 'int'>
+SHORTCUTMENUDURATION = 250 <type 'int'>
+SUPPORTPATH = C:\Users\poltinir.MASTER.000\AppData\Roaming\QGIS\QGIS3\profiles\default\python\plugins\Qad\support <type 'string'>
+SHOWTEXTWINDOW = True <type 'bool'>
+TOOLTIPTRANSPARENCY = 0 <type 'int'>
+TOOLTIPSIZE = 0 <type 'int'>
+WINDOWAREACOLOR = #1F78B4 <type 'string'>
+TOOLTIPSIZ = 0 <type 'int'>
